<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="active_profile_level">Active level profile</string>
    <string name="active_profile_speed">Active speed profile</string>
    <string name="add_new_user">Add new user</string>
    <string name="age">Age:</string>
    <string name="age_hint">Age</string>
    <string name="agree">Agree</string>
    <string name="alert">Alert</string>
    <string name="alert_title">Sole</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">SOLE</string>
    <string name="app_version">null</string>
    <string name="avg_calorie_chart">Average Calorie</string>
    <string name="avg_calorie_chart2">kCal</string>
    <string name="avg_hr_colon">Avg. HR:</string>
    <string name="avg_level_colon">Avg. Level:</string>
    <string name="avg_mets_colon">Avg. METs:</string>
    <string name="avg_pace_chart">Average Pace</string>
    <string name="avg_pace_chart2">min/mile</string>
    <string name="avg_pace_chart2_km">min/km</string>
    <string name="avg_rpm_chart2">RPM</string>
    <string name="avg_rpm_colon">Avg. RPM:</string>
    <string name="avg_speed_chart">Average Speed</string>
    <string name="avg_speed_chart2">mph</string>
    <string name="avg_speed_chart2_km">kph</string>
    <string name="avg_speed_colon">Avg. Speed:</string>
    <string name="avg_watts_colon">Avg. Watts:</string>
    <string name="back">BACK</string>
    <string name="begin">Press to begin</string>
    <string name="begin_start_info">Press Start to begin workout, or select another program.</string>
    <string name="begin_sync_info">Press Sync to begin workout, or select another program.</string>
    <string name="bike">Bike</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cal_remaining">Cal remaining</string>
    <string name="calorie">Calorie</string>
    <string name="calorie_info">This program follows a quick progression up to the maximum speed level (default or user input level) that is sustained for 2/3 of the workout. This program will challenge your ability to sustain your energy output for an extended period of time.</string>
    <string name="calorie_title">CALORIES</string>
    <string name="calorie_unit">KCal</string>
    <string name="calorie_upper">CALORIES</string>
    <string name="calories">CALORIES</string>
    <string name="calories_colon">Calories:</string>
    <string name="calories_hour">CAL/HOUR</string>
    <string name="cancel">Cancel</string>
    <string name="cardio">Cardio</string>
    <string name="cardio_info">The Cardio program is designed to increase your cardiovascular function and endurance. This is exercise for your heart and lungs. It will build up your heart muscle and increase blood flow and lung capacity. This is achieved by incorporating a higher level of exertion with slight fluctuations in work.</string>
    <string name="chart">CHART</string>
    <string name="close">Close</string>
    <string name="close_02">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Confirm</string>
    <string name="connect">Connect</string>
    <string name="connect_hr_title">Select wireless heartbeat device</string>
    <string name="continue_text">Continue</string>
    <string name="custom">Custom</string>
    <string name="custom_record_no">NO</string>
    <string name="custom_record_text1">是否不存取離開</string>
    <string name="custom_record_yes">YES</string>
    <string name="dashboard">Dashboard</string>
    <string name="data_reception">Receive Data</string>
    <string name="date">DATE</string>
    <string name="day">Day</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="default_web_client_id">791284125252-gopegbh8l2crqss5eqq7n5pg7rjr54po.apps.googleusercontent.com</string>
    <string name="define_zxingandroidembedded" />
    <string name="delete_user">Are you sure to delete this user?</string>
    <string name="detail_row_datas">Display detailed workout list</string>
    <string name="device_disabled">Bluetooth disabled!</string>
    <string name="device_disconnected">Device disconnected!</string>
    <string name="device_error">Device Error. press stop!</string>
    <string name="device_failed">Connection failed!</string>
    <string name="device_timeout">Connection is timeout!</string>
    <string name="dialog_stop">Stop</string>
    <string name="display_alert_waiting_start">Press Start on the console to begin workout.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="export_old_data">Export Old Data</string>
    <string name="forgot_text">Enter your email address. We will send you a reset password to your email.</string>
    <string name="gender">Gender:</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="goals">Goals:</string>
    <string name="goals_hint">Goals</string>
    <string name="login_email_address">Email Address</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="logout">Logout</string>
    <string name="month">Month</string>
    <string name="name">Name:</string>
    <string name="name_hint">Name</string>
    <string name="new_user_profile">New User Profile</string>
    <string name="notes">Notes:</string>
    <string name="notes_hint">Notes</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="toolTipAddress">Address</string>
    <string name="toolTipDescription">Description</string>
    <string name="toolTipTitle">Title</string>
    <string name="total_to_date">Total to Date</string>
    <string name="unit_lb">lb</string>
    <string name="user">User</string>
    <string name="week">Week</string>
    <string name="weight">Weight:</string>
    <string name="weight_hint">Weight</string>
    <string name="year">Year</string>
</resources>