<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    android:paddingStart="150dp"
    android:paddingEnd="150dp">
    <com.dyaco.sole.custom_view.TypefaceTextView
        android:textSize="@dimen/display_bottom_text_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/calendar_totals_day_textview"
        android:background="@drawable/all_btn_a_01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_totals_height"
        android:text="@string/day"/>
    <com.dyaco.sole.custom_view.TypefaceTextView
        android:textSize="@dimen/display_bottom_text_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/calendar_totals_week_textview"
        android:background="@drawable/all_btn_a_01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_totals_height"
        android:layout_marginTop="10dp"
        android:text="@string/week"/>
    <com.dyaco.sole.custom_view.TypefaceTextView
        android:textSize="@dimen/display_bottom_text_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/calendar_totals_month_textview"
        android:background="@drawable/all_btn_a_01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_totals_height"
        android:layout_marginTop="10dp"
        android:text="@string/month"/>
    <com.dyaco.sole.custom_view.TypefaceTextView
        android:textSize="@dimen/display_bottom_text_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/calendar_totals_year_textview"
        android:background="@drawable/all_btn_a_01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_totals_height"
        android:layout_marginTop="10dp"
        android:text="@string/year"/>
    <com.dyaco.sole.custom_view.TypefaceTextView
        android:textSize="@dimen/display_bottom_text_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/calendar_totals_total_textview"
        android:background="@drawable/all_btn_a_01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_totals_height"
        android:layout_marginTop="10dp"
        android:text="@string/total_to_date"/>
</LinearLayout>
