<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_background_layout"
    android:background="#eee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/user_main_layout"
        android:background="@drawable/user_sole_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/user_imageView"
            android:background="@drawable/user_sole_leftpic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/user_contentlinearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="30sp"
                android:layout_gravity="center"
                android:id="@+id/user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:fontFamily="sans-serif-smallcaps"/>
            <Button
                android:textSize="13sp"
                android:layout_gravity="center"
                android:id="@+id/user_edit_profile"
                android:background="@drawable/user_sole_button_a"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false"/>
            <Button
                android:textSize="13sp"
                android:layout_gravity="center"
                android:id="@+id/user_logout"
                android:background="@drawable/user_sole_button_a"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:text="@string/logout"
                android:textAllCaps="false"/>
            <Button
                android:textSize="13sp"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:id="@+id/user_export_old_data"
                android:background="@drawable/user_sole_button_c0"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:text="@string/export_old_data"
                android:textAllCaps="false"/>
            <Button
                android:textSize="13sp"
                android:layout_gravity="center"
                android:id="@+id/privacyPolicy"
                android:background="#00000000"
                android:visibility="gone"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
