<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forget_background_layout"
    android:background="@drawable/forget_xterra_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/forget_main_layout"
        android:background="@drawable/forget_xterra_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/forget_imageView"
            android:background="@drawable/forget_xterra_leftpic"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/forget_contentlinearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:id="@+id/forget_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_password"/>
            <TextView
                android:textSize="13sp"
                android:textColor="#ffffff"
                android:id="@+id/forget_text"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:text="@string/forgot_text"/>
            <EditText
                android:textSize="13sp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/forget_email"
                android:background="@drawable/signup_sole_button_a"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:hint="@string/login_email_address"
                android:ems="10"
                android:inputType="textEmailAddress"/>
            <Button
                android:textSize="13sp"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:id="@+id/forget_reset"
                android:background="@drawable/signup_sole_button_c0"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:text="@string/reset"
                android:textAllCaps="false"/>
            <Button
                android:textSize="13sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:id="@+id/forget_cancel"
                android:background="#00000000"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:text="@string/cancel"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
