<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/sign_margin_start_end"
    android:layout_marginEnd="@dimen/sign_margin_start_end">
    <com.dyaco.sole.custom_view.TypefaceTextView
        android:textSize="@dimen/all_title_text_size"
        android:layout_gravity="start"
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/all_title_height"
        android:text="@string/new_user_profile"
        style="@style/S_FragmentTitle"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:background="@drawable/s_all_btn_a_02"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_height"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <com.dyaco.sole.custom_view.TypefaceTextView
                android:textSize="@dimen/user_text_size"
                android:textColor="@color/black"
                android:gravity="start|center_vertical"
                android:id="@+id/name_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"/>
            <com.dyaco.sole.custom_view.MyEditText
                android:textSize="@dimen/user_text_size"
                android:textColor="@color/black"
                android:gravity="start|center_vertical"
                android:id="@+id/name_edittext"
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name_hint"
                android:singleLine="true"
                android:maxLength="50"
                android:inputType="textAutoComplete"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/name_textview"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_height"
            android:layout_marginTop="@dimen/user_margin_top">
            <RelativeLayout
                android:background="@drawable/s_all_btn_a_02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">
                <com.dyaco.sole.custom_view.TypefaceTextView
                    android:textSize="@dimen/user_text_size"
                    android:textColor="@color/black"
                    android:gravity="start|center_vertical"
                    android:id="@+id/age_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/age"/>
                <com.dyaco.sole.custom_view.MyEditText
                    android:textSize="@dimen/user_text_size"
                    android:textColor="@color/black"
                    android:gravity="start|center_vertical"
                    android:id="@+id/age_edittext"
                    android:background="@color/transparent"
                    android:nextFocusDown="@+id/weight_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/age_hint"
                    android:singleLine="true"
                    android:maxLength="2"
                    android:inputType="numberSigned"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/age_textview"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/s_all_btn_a_02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginStart="@dimen/user_margin_top"
                android:layout_marginEnd="@dimen/user_margin_top">
                <com.dyaco.sole.custom_view.TypefaceTextView
                    android:textSize="@dimen/user_text_size"
                    android:textColor="@color/black"
                    android:gravity="start|center_vertical"
                    android:id="@+id/weight_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/weight"/>
                <com.dyaco.sole.custom_view.MyEditText
                    android:textSize="@dimen/user_text_size"
                    android:textColor="@color/black"
                    android:gravity="start|center_vertical"
                    android:id="@+id/weight_edittext"
                    android:background="@color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/weight_hint"
                    android:singleLine="true"
                    android:maxLength="3"
                    android:inputType="numberSigned"
                    android:layout_marginStart="15dp"
                    android:layout_toStartOf="@+id/unit_textview"
                    android:layout_toEndOf="@+id/weight_textview"/>
                <com.dyaco.sole.custom_view.TypefaceTextView
                    android:textSize="@dimen/user_text_size"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:id="@+id/unit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/unit_lb"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/s_all_btn_a_02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">
                <com.dyaco.sole.custom_view.TypefaceTextView
                    android:textSize="@dimen/user_text_size"
                    android:textColor="@color/black"
                    android:gravity="start|center_vertical"
                    android:id="@+id/gender_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gender"/>
                <com.dyaco.sole.custom_view.TypefaceTextView
                    android:textSize="@dimen/user_text_size"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:id="@+id/gender_male_textview"
                    android:background="@drawable/s_all_btn_a_03"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/gender_male"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"/>
                <com.dyaco.sole.custom_view.TypefaceTextView
                    android:textSize="@dimen/user_text_size"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:id="@+id/gender_female_textview"
                    android:background="@drawable/s_all_btn_a_04"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/gender_female"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:background="@drawable/s_all_btn_a_02"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/user_margin_top"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <com.dyaco.sole.custom_view.TypefaceTextView
                android:textSize="@dimen/user_text_size"
                android:textColor="@color/black"
                android:gravity="start|center_vertical"
                android:id="@+id/goals_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/goals"/>
            <com.dyaco.sole.custom_view.MyEditText
                android:textSize="@dimen/user_text_size"
                android:textColor="@color/black"
                android:gravity="top"
                android:id="@+id/goals_edittext"
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text=""
                android:hint="@string/goals_hint"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/goals_textview"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/notes_layout"
            android:background="@drawable/s_all_btn_a_02"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/user_margin_top"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <com.dyaco.sole.custom_view.TypefaceTextView
                android:textSize="@dimen/user_text_size"
                android:textColor="@color/black"
                android:gravity="start|center_vertical"
                android:id="@+id/notes_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/notes"/>
            <com.dyaco.sole.custom_view.MyEditText
                android:textSize="@dimen/user_text_size"
                android:textColor="@color/black"
                android:gravity="top"
                android:id="@+id/notes_edittext"
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text=""
                android:hint="@string/notes_hint"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/notes_textview"/>
        </RelativeLayout>
        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_height">
            <com.dyaco.sole.custom_view.TypefaceTextView
                android:textSize="@dimen/sign_new_user_text_size"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/save_textview"
                android:background="@drawable/s_all_btn_a_01"
                android:padding="0dp"
                android:layout_width="@dimen/sign_new_user_width"
                android:layout_height="@dimen/sign_new_user_height"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
