<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="left"
            android:id="@+id/tooltip_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/toolTipTitle"
            android:maxEms="17"
            android:layout_weight="1"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/black"
            android:id="@+id/tooltip_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolTipDescription"
            android:maxEms="17"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/black"
            android:id="@+id/tooltip_subdescription"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolTipAddress"
            android:maxEms="17"/>
    </LinearLayout>
    <com.mapbox.mapboxsdk.views.TipView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
</LinearLayout>
